2002-04-25  Nick Clifton  <nickc@cambridge.redhat.com>

        * example/calc/configure.in (AM_MAINTAINER_MODE): Add invocation.
        * example/calc/aclocal.m4: Regenerate.
        * example/calc/configure: Regenerate.
        * example/calc/Makefile.in: Regenerate.

2002-03-22  Elena Zannoni  <ezannoni@redhat.com>
 
	* baseboards/powerpc-sim.exp: Don't disable inferior
        function calls.

2002-03-31  Hans-Peter Nilsson  <hp@bitrange.com>

        * lib/remote.exp (check_for_board_status): Also strip a \r before
        a \n before the exit message.

2002-03-26  Hans-Peter Nilsson  <hp@bitrange.com>

        * lib/libgloss.exp (build_wrapper): Wrap _exit too, unless
        wrap_m68k_aout, uses_underscores or is_vxworks are defined in
        target_info.

        * testglue.c [!VXWORKS && !UNDERSCORES && !WRAP_M68K_AOUT]
        (REAL__EXIT): Define.
        [!UNDERSCORES && !WRAP_M68K_AOUT] (ORIG__EXIT): Define.
        [REAL__EXIT] (REAL__EXIT): Prototype.
        [ORIG__EXIT] (ORIG__EXIT): New function wrapper.
        (done_exit_message): New static variable.
        (ORIG_EXIT): Set done_exit_message.

2002-03-11  Chris Demetriou  <cgd@broadcom.com>

        * baseboards/mips-sim-idt32.exp: New file.

Wed Nov 21 18:02:49 PST 2001  Brendan Conoboy <blc@redhat.com>

	* lib/rsh.exp: Obey rsh_prog/rcp_prog, support username
	* lib/remote.exp: same.

2002-02-22  Bob Wilson  <bob.wilson@acm.org>

        * baseboards/xtensa-sim.exp: New file.

2001-11-02  Alexandre Oliva  <aoliva@redhat.com>

        * lib/libgloss.exp [get_multilibs]: Compute multitop earlier, and
        use --print-multi-directory if available.

2002-02-05  Nick Clifton  <nickc@cambridge.redhat.com>

        * lib/libgloss.exp (g++_include_flags): Add top level
        libstdc++-v3 build include path, remove duplicate src path.
        (libstdc++_include_flags): Add top level libstdc++-v3 build
        include path.

2001-11-10  Hans-Peter Nilsson  <hp@bitrange.com>  
